fix(notebook): update training notebook

--- a/notebook/01_train_sarki_anpd.ipynb
+++ b/notebook/01_train_sarki_anpd.ipynb
@@ -11,14 +11,8 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Bx35cNHqk2UA",
-        "outputId": "89f675bb-4dae-4790-c11b-ea23c652dcaf"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -37,44 +31,38 @@
       ],
       "source": [
         "# Install Libraries\n",
-        "!pip install ultralytics==8.0.134 onnx onnxruntime --quiet"
+        "!pip install ultralytics==8.0.20 onnx onnxruntime roboflow --quiet"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kmmmAi17rhrB",
-        "outputId": "edc6b3f1-4fc7-4d64-9a0d-b2ea68b1194b"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
-          "name": "stdout",
+          "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Ultralytics YOLOv8.1.14 🚀 Python-3.10.11 torch-2.2.0+cpu CPU (Intel Core(TM) i7-8850H 2.60GHz)\n",
-            "Setup complete ✅ (12 CPUs, 31.5 GB RAM, 199.3/476.3 GB disk)\n"
+            "Ultralytics YOLOv8.0.20 🚀 Python-3.10.6 torch-2.0.1+cu118 CUDA:0 (Tesla T4, 15102MiB)\n",
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 24.3/78.2 GB disk)\n"
           ]
         }
       ],
       "source": [
         "import ultralytics\n",
-        "ultralytics.checks()"
+        "from roboflow import Roboflow\n",
+        "from ultralytics import YOLO\n",
+        "import shutil\n",
+        "import os\n",
+        "\n",
+        "\n",
+        "ultralytics.checks()\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7Bh-2CpKmS2g",
-        "outputId": "53cd8c2d-214b-422d-89ba-2ca70c189da8"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
@@ -85,9 +73,7 @@
         }
       ],
       "source": [
-        "import os\n",
-        "\n",
-        "HOME = os.getcwd()\n",
+        "HOME: str = os.getcwd()\n",
         "print(HOME)"
       ]
     },
@@ -131,30 +117,14 @@
         }
       ],
       "source": [
-        "# Load Data\n",
+        "# Set up the Roboflow Dataset Directory\n",
         "!mkdir {HOME}/datasets\n",
         "%cd {HOME}/datasets\n",
         "\n",
-        "!pip install roboflow --quiet\n",
-        "\n",
-        "from roboflow import Roboflow\n",
-        "\n",
-        "\n",
+        "# Download the dataset\n",
         "rf = Roboflow(api_key=\"sOd6IHKIcXdroCfAXoWn\")\n",
         "project = rf.workspace(\"abdulazeez-jimoh-1qumc\").project(\"sarkin-kofa-anpd\")\n",
         "dataset = project.version(1).download(\"yolov8\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "HY2ZvWWfkX41"
-      },
-      "outputs": [],
-      "source": [
-        "from ultralytics import YOLO\n",
-        "import shutil\n"
       ]
     },
     {
@@ -226,16 +196,20 @@
         }
       ],
       "source": [
-        "# Nano Model\n",
+        "# Change to the home directory\n",
         "%cd {HOME}\n",
         "\n",
-        "yolov8n = YOLO('yolov8n.pt')\n",
-        "name = \"anprv8n\"\n",
+        "# Load the model\n",
+        "yolov8n = YOLO(\"yolov8n.pt\")\n",
+        "name = \"anpd\"\n",
         "\n",
+        "# Train the model\n",
         "yolov8n.train(data=f\"{dataset.location}/data.yaml\", epochs=100, imgsz=640, name=name)\n",
         "\n",
         "# Export the model\n",
-        "yolov8n.export(format='onnx')\n",
+        "yolov8n.export(format=\"onnx\", imgsz=640, half=True, dynamic=True, simplify=True)\n",
+        "\n",
+        "# Copy the model\n",
         "shutil.copy2(f\"runs/detect/{name}/weights/best.onnx\", f\"{name}.onnx\")\n",
         "shutil.copy2(f\"runs/detect/{name}/weights/best.pt\", f\"{name}.pt\")\n"
       ]
