--- a/notebook/02_train_sarki_anpr.ipynb
+++ b/notebook/02_train_sarki_anpr.ipynb
@@ -37,7 +37,7 @@
       ],
       "source": [
         "# Install Libraries\n",
-        "!pip install ultralytics==8.0.20 onnx onnxruntime --quiet"
+        "!pip install ultralytics==8.0.20 onnx onnxruntime roboflow --quiet"
       ]
     },
     {
@@ -62,7 +62,13 @@
       ],
       "source": [
         "import ultralytics\n",
-        "ultralytics.checks()"
+        "from roboflow import Roboflow\n",
+        "from ultralytics import YOLO\n",
+        "import shutil\n",
+        "import os\n",
+        "\n",
+        "\n",
+        "ultralytics.checks()\n"
       ]
     },
     {
@@ -85,8 +91,6 @@
         }
       ],
       "source": [
-        "import os\n",
-        "\n",
         "HOME = os.getcwd()\n",
         "print(HOME)"
       ]
@@ -131,30 +135,14 @@
         }
       ],
       "source": [
-        "# Load Data\n",
+        "# Set up the Roboflow Dataset Directory\n",
         "!mkdir {HOME}/datasets\n",
         "%cd {HOME}/datasets\n",
         "\n",
-        "!pip install roboflow --quiet\n",
-        "\n",
-        "from roboflow import Roboflow\n",
-        "\n",
-        "\n",
+        "# Download the dataset\n",
         "rf = Roboflow(api_key=\"sOd6IHKIcXdroCfAXoWn\")\n",
         "project = rf.workspace(\"abdulazeez-jimoh-1qumc\").project(\"anpr-aimgq\")\n",
         "dataset = project.version(1).download(\"yolov8\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {
-        "id": "HY2ZvWWfkX41"
-      },
-      "outputs": [],
-      "source": [
-        "from ultralytics import YOLO\n",
-        "import shutil\n"
       ]
     },
     {
@@ -226,18 +214,22 @@
         }
       ],
       "source": [
-        "# Nano Model\n",
+        "# Change to the home directory\n",
         "%cd {HOME}\n",
         "\n",
-        "yolov8n = YOLO('yolov8n.pt')\n",
-        "name = \"anprv8n\"\n",
+        "# Load the model\n",
+        "yolov8n = YOLO(\"yolov8n.pt\")\n",
+        "name = \"anpr\"\n",
         "\n",
+        "# Train the model\n",
         "yolov8n.train(data=f\"{dataset.location}/data.yaml\", epochs=100, imgsz=640, name=name)\n",
         "\n",
         "# Export the model\n",
-        "yolov8n.export(format='onnx')\n",
+        "yolov8n.export(format=\"onnx\", imgsz=640, half=True, dynamic=True, simplify=True)\n",
+        "\n",
+        "# Copy the model\n",
         "shutil.copy2(f\"runs/detect/{name}/weights/best.onnx\", f\"{name}.onnx\")\n",
-        "shutil.copy2(f\"runs/detect/{name}/weights/best.pt\", f\"{name}.pt\")\n"
+        "shutil.copy2(f\"runs/detect/{name}/weights/best.pt\", f\"{name}.pt\")"
       ]
     },
     {
